--- a/data/gdebi.desktop.in
+++ b/data/gdebi.desktop.in
@@ -8,7 +8,7 @@ Terminal=false
 Type=Application
 Categories=System;
 MimeType=application/vnd.debian.binary-package;
-NotShowIn=KDE;
+NoDisplay=true
 X-Ubuntu-Gettext-Domain=gdebi
 StartupNotify=true
 _Keywords=package;apt;dpkg;install
