--- a/data/gdebi.desktop.in
+++ b/data/gdebi.desktop.in
@@ -3,7 +3,7 @@ _Name=GDebi Package Installer
 _GenericName=Package Installer
 _Comment=Install and view software packages
 Exec=gdebi-gtk %f
-Icon=gnome-mime-application-x-deb
+Icon=package
 Terminal=false
 Type=Application
 Categories=System;
