--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,10 @@
 Source: gdebi
 Section: admin
 Priority: optional
-Maintainer: Ubuntu Developers <ubuntu-dev-team@lists.alioth.debian.org>
-Uploaders: Michael Vogt <mvo@debian.org>
+Maintainer: Linux Mint <root@linuxmint.com>
 Build-Depends: debhelper (>= 9),
                dh-python,
                gir1.2-gtk-3.0,
-               gir1.2-vte-2.91,
                python3-all,
                python3-apt,
                python3-gi,
@@ -15,12 +13,9 @@ Build-Depends: debhelper (>= 9),
                intltool,
                xvfb,
                xauth,
-               pyflakes,
-               pyflakes3,
                lintian,
 X-Python3-Version: >= 3.3
 Standards-Version: 3.9.7
-Vcs-Bzr: https://code.launchpad.net/~gdebi-developers/gdebi/trunk
 
 Package: gdebi-core
 Architecture: all
@@ -28,6 +23,7 @@ Depends: ${python3:Depends},
          ${misc:Depends},
          python3-apt,
          python3-debian,
+         mint-common,
          file
 Suggests: xz-utils | xz-lzma
 Description: simple tool to install deb files
@@ -45,9 +41,7 @@ Depends: ${python3:Depends},
          ${misc:Depends},
          gdebi-core (= ${source:Version}),
          gir1.2-gtk-3.0,
-         gir1.2-vte-2.91,
          python3-gi,
-         policykit-1,
          gnome-icon-theme
 Recommends: libgtk2-perl, shared-mime-info, lintian
 Description: simple tool to view and install deb files - GNOME GUI
