--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Linux Mint <root@linuxmint.com>
 Build-Depends: debhelper (>= 9),
                dh-python,
                gir1.2-gtk-3.0,
+               mint-common,
                python3-all,
                python3-apt,
                python3-gi,
