--- a/data/gdebi.desktop.in
+++ b/data/gdebi.desktop.in
@@ -2,7 +2,7 @@
 _Name=GDebi Package Installer
 _GenericName=Package Installer
 _Comment=Install and view software packages
-Exec=gdebi-gtk %f
+Exec=sh -c "gdebi-gtk %f"
 Icon=package
 Terminal=false
 Type=Application
